Update box-sizing of blocks in editor style

--- a/src/scss/editor.scss
+++ b/src/scss/editor.scss
@@ -101,6 +101,7 @@ body {
   // =============================================================================
 
   .wp-block {
+    box-sizing: border-box;
     margin: calc(28px + var(--spacing-offset, 0px)) auto;
     max-width: var(--editor-max-width);
 
