--- a/src/scss/common/_lightmode.scss
+++ b/src/scss/common/_lightmode.scss
@@ -51,6 +51,7 @@
   // --tax-cloud-current: var(--primary-500);
   --disabled-pattern: hsl(var(--bg-950-free) / 3%) repeating-linear-gradient(-45deg, hsl(var(--bg-950-free) / 6%), hsl(var(--bg-950-free) / 6%) 2px, transparent 2px, transparent 5px);
   --chapter-list-warning-color: var(--red-600);
+  --chapter-infobox-warning-color: var(--red-500);
   --strong-filter: none;
   --invert-filter: invert(1); // Checkbox check
 
