Update dark author badge background

--- a/src/scss/common/_properties.scss
+++ b/src/scss/common/_properties.scss
@@ -552,7 +552,7 @@
   --badge-admin-color: var(--fg-100);
   --badge-admin-background: #79518d;
   --badge-author-color: var(--fg-200);
-  --badge-author-background: #b1355a;
+  --badge-author-background: #b37819;
   --badge-override-color: var(--fg-300);
   --badge-override-background: #5a5a7f;
 
