Improve button class on wp-block-button

--- a/src/scss/common/_blocks.scss
+++ b/src/scss/common/_blocks.scss
@@ -564,6 +564,15 @@ figure.wp-block-pullquote {
       color: var(--button-primary-color-hover);
     }
   }
+
+  // Theme button style applied
+  &.button {
+    display: inline-flex;
+
+    a {
+      padding: 0 !important;
+    }
+  }
 }
 
 .wp-block-buttons > .wp-block-button {
