Allow footnotes block

--- a/src/scss/common/_blocks.scss
+++ b/src/scss/common/_blocks.scss
@@ -669,3 +669,15 @@ figure.wp-block-pullquote {
     max-width: unset;
   }
 }
+
+// =============================================================================
+// FOOTNOTES
+// =============================================================================
+
+.wp-block-footnotes {
+  border-style: solid;
+
+  li:not(:last-child) {
+    margin-bottom: 0;
+  }
+}
