Allow details block

--- a/src/scss/common/_setup.scss
+++ b/src/scss/common/_setup.scss
@@ -145,8 +145,8 @@ details {
     cursor: pointer;
   }
 
-  > :not([class], summary) {
-    margin-top: 2px;
+  &[open] summary {
+    margin-bottom: .375em;
   }
 }
 
