--- a/src/scss/common/_lightmode.scss
+++ b/src/scss/common/_lightmode.scss
@@ -295,6 +295,7 @@
   --button-background-active: var(--bg-700);
   // --button-border-active: 1px solid transparent;
   --button-barberpole: var(--bg-300);
+  // --button-oauth-connected: var(--button-background-active);
 
   // === BUTTONS - PRIMARY =====================================================
 
