--- a/src/scss/common/_properties.scss
+++ b/src/scss/common/_properties.scss
@@ -417,6 +417,7 @@
   --button-background-active: var(--bg-100);
   --button-border-active: 1px solid transparent;
   --button-barberpole: var(--bg-500);
+  --button-oauth-connected: var(--button-background-active);
 
   // === BUTTONS - PRIMARY =====================================================
 
