--- a/src/scss/common/_lightmode.scss
+++ b/src/scss/common/_lightmode.scss
@@ -128,6 +128,7 @@
   // --layout-border-radius-small: 2px;
   // --layout-link-color: inherit;
   // --layout-link-color-hover: inherit;
+  --layout-hr-dots-color: hsl(var(--bg-950-free) / 40%);
   --layout-hr-border: 2px solid var(--hr-border-color, hsl(var(--bg-950-free) / 15%));
   --layout-hr-border-dashed: 2px dashed var(--hr-border-color, hsl(var(--bg-950-free) / 40%));
 
