--- a/src/scss/common/_properties.scss
+++ b/src/scss/common/_properties.scss
@@ -235,6 +235,7 @@
   --layout-border-radius-small: 2px;
   --layout-link-color: inherit;
   --layout-link-color-hover: inherit;
+  --layout-hr-dots-color: var(--bg-200);
   --layout-hr-border: 2px solid var(--hr-border-color, var(--bg-300));
   --layout-hr-border-dashed: 2px dashed var(--hr-border-color, var(--bg-200));
 
