--- a/src/scss/common/_lightmode.scss
+++ b/src/scss/common/_lightmode.scss
@@ -128,9 +128,10 @@
   // --layout-border-radius-small: 2px;
   // --layout-link-color: inherit;
   // --layout-link-color-hover: inherit;
+  --layout-lineart-color: hsl(var(--bg-950-free) / 20%);
   --layout-hr-dots-color: hsl(var(--bg-950-free) / 40%);
-  --layout-hr-border: 2px solid var(--hr-border-color, hsl(var(--bg-950-free) / 15%));
-  --layout-hr-border-dashed: 2px dashed var(--hr-border-color, hsl(var(--bg-950-free) / 40%));
+  // --layout-hr-border: 2px solid var(--hr-border-color, var(--layout-lineart-color));
+  // --layout-hr-border-dashed: 2px dashed var(--hr-border-color, var(--layout-lineart-color));
 
   // === MINIMAL ===============================================================
 
