--- a/src/scss/common/_properties.scss
+++ b/src/scss/common/_properties.scss
@@ -235,9 +235,10 @@
   --layout-border-radius-small: 2px;
   --layout-link-color: inherit;
   --layout-link-color-hover: inherit;
+  --layout-lineart-color: var(--bg-300);
   --layout-hr-dots-color: var(--bg-200);
-  --layout-hr-border: 2px solid var(--hr-border-color, var(--bg-300));
-  --layout-hr-border-dashed: 2px dashed var(--hr-border-color, var(--bg-200));
+  --layout-hr-border: 2px solid var(--hr-border-color, var(--layout-lineart-color));
+  --layout-hr-border-dashed: 2px dashed var(--hr-border-color, var(--layout-lineart-color));
 
   // === MINIMAL ===============================================================
 
