Add solid border card frame options

--- a/src/scss/common/_lightmode.scss
+++ b/src/scss/common/_lightmode.scss
@@ -162,6 +162,8 @@
   // --card-label-color: var(--fg-inverted);
   // --card-label-background: var(--fg-500);
   // --card-unavailable-filter: grayscale(0.5) blur(1.5px);
+  --card-frame-border-color: var(--bg-300);
+  // --card-style-border-color: var(--card-frame-border-color);
   --card-footer-color: var(--fg-600);
   --card-footer-icon-color: var(--fg-700);
   --card-text-icon-color: var(--fg-600);
