Fix CSS properties

--- a/src/scss/customize/card-frame-stacked.scss
+++ b/src/scss/customize/card-frame-stacked.scss
@@ -2,6 +2,7 @@
 @import '../common/_mixins';
 
 .card {
+  --card-style-border-color: var(--card-frame-border-color);
   --card-style-border-width: 2px;
   --this-rotation: calc(2deg * var(--this-rotation-mod, 1) * var(--this-flip, 1));
   --this-rotation-s: calc(1.75deg * var(--this-rotation-mod, 1) * var(--this-flip, 1));
