Update combinations and minimalist mode

--- a/src/scss/customize/card-style-combined.scss
+++ b/src/scss/customize/card-style-combined.scss
@@ -12,11 +12,10 @@
 }
 
 .card._combined {
-  --card-style-border-width: 0;
-
   .card__footer._article .card__footer-box,
   .card__body > .card__footer .card__footer-box:is(._left, :last-child) {
     padding: calc(var(--this-padding) * 0.5) var(--this-padding) var(--this-padding);
+    border: none !important;
   }
 
   .rating-letter-label {
