--- a/src/scss/common/_properties.scss
+++ b/src/scss/common/_properties.scss
@@ -244,8 +244,8 @@
 
   --minimal-page-box-shadow: 0 0 1px rgb(0 0 0 / 40%);
   --minimal-page-drop-shadow: drop-shadow(0 0 1px rgb(0 0 0 / 40%));
-  --minimal-box-shadow: 0 0 1px rgb(0 0 0 / 40%);
-  --minimal-drop-shadow: drop-shadow(0 0 1px rgb(0 0 0 / 40%));
+  --minimal-box-shadow: 0 0 0 1px rgb(0 0 0 / 60%);
+  --minimal-drop-shadow: drop-shadow(0 0 1px rgb(0 0 0 / 60%));
 
   // === HEADER ================================================================
 
@@ -325,7 +325,7 @@
 
   // === SHADOWS ===============================================================
 
-  --box-shadow-border: 0 0 0 1px rgb(0 0 0 / 12%);
+  --box-shadow-border: 0 0 0 1.5px var(--card-frame-border-color, rgb(0 0 0 / 60%));
   --box-shadow-xs: 0 1px 2px 0 rgb(0 0 0 / 12%);
   --box-shadow-s: 0 1px 3px 0 rgb(0 0 0 / 11%), 0 1px 2px -1px rgb(0 0 0 / 10%);
   --box-shadow: 0 3px 6px -1px rgb(0 0 0 / 12%), 0 -1px 4px -2px rgb(0 0 0 / 15%);
@@ -333,7 +333,7 @@
   --box-shadow-l: rgb(0 0 0 / 10%) 0 6px 12px -2px, rgb(0 0 0 / 15%) 0 3px 7px -3px;
   --box-shadow-xl: 0 3px 8px -1px rgb(0 0 0 / 9%), 0 3px 12px -1px rgb(0 0 0 / 17%);
 
-  --drop-shadow-border: drop-shadow(0 0 1px rgb(0 0 0 / 30%));
+  --drop-shadow-border: drop-shadow(0 0 1px var(--card-frame-border-color, rgb(0 0 0 / 60%)));
   --drop-shadow-xs: drop-shadow(0 1px 2px rgb(0 0 0 / 12%));
   --drop-shadow-s: drop-shadow(0 1px 3px rgb(0 0 0 / 9%)) drop-shadow(0 1px 2px rgb(0 0 0 / 7%));
   --drop-shadow: drop-shadow(0 2px 4px rgb(0 0 0 / 10%)) drop-shadow(0 -1px 3px rgb(0 0 0 / 5%));
@@ -652,8 +652,8 @@
   --drop-shadow-xl: var(--minimal-drop-shadow);
   --page-box-shadow: var(--minimal-page-box-shadow);
   --page-drop-shadow: var(--minimal-page-drop-shadow);
-  --card-box-shadow: var(--minimal-box-shadow);
-  --card-drop-shadow: var(--minimal-page-box-shadow);
+  --card-box-shadow: 0 0 0 1px var(--card-frame-border-color, rgb(0 0 0 / 20%)); // Override custom style
+  --card-drop-shadow: 0 0 1px var(--card-frame-border-color, rgb(0 0 0 / 30%)); // Override custom style
   --card-style-border-width: 1px;
 }
 
