Fix minimal box and drop shadows

--- a/src/scss/common/_properties.scss
+++ b/src/scss/common/_properties.scss
@@ -244,8 +244,8 @@
 
   --minimal-page-box-shadow: 0 0 1px rgb(0 0 0 / 40%);
   --minimal-page-drop-shadow: drop-shadow(0 0 1px rgb(0 0 0 / 40%));
-  --minimal-box-shadow: 0 0 0 1px rgb(0 0 0 / 60%);
-  --minimal-drop-shadow: drop-shadow(0 0 1px rgb(0 0 0 / 60%));
+  --minimal-box-shadow: 0 0 1px rgb(0 0 0 / 40%);
+  --minimal-drop-shadow: drop-shadow(0 0 1px rgb(0 0 0 / 40%));
 
   // === HEADER ================================================================
 
