--- a/src/scss/customize/content-list-style-lines.scss
+++ b/src/scss/customize/content-list-style-lines.scss
@@ -5,12 +5,12 @@
   --content-li-background: none;
   --card-content-li-background: none;
 
-  :is(.chapter-group__list-item, .story__blog-list-item, .card__link-list-item) {
+  [data-view=list] :is(.chapter-group__list-item, .story__blog-list-item, .card__link-list-item) {
     border-radius: 0;
     border-bottom: var(--content-li-hr-border);
   }
 
-  .card__link-list-item:last-child {
+  [data-view=list] .card__link-list-item:last-child {
     border-bottom: none;
   }
 }
