--- a/src/scss/_minimal.scss
+++ b/src/scss/_minimal.scss
@@ -59,12 +59,12 @@
     }
   }
 
-  .chapter-group__list-item-link {
+  [data-view=list] .chapter-group__list-item-link {
     grid-area: 1 / 1 / 2 / 3;
     padding-left: 8px;
   }
 
-  .chapter-group__list-item-subrow {
+  [data-view=list] .chapter-group__list-item-subrow {
     grid-area: 2 / 1 / 3 / 3;
     padding-left: 8px;
   }
