--- a/src/scss/common/_lightmode.scss
+++ b/src/scss/common/_lightmode.scss
@@ -69,7 +69,7 @@
   // --content-li-background: var(--content-li-background-gradient);
   --content-li-background-full: hsl(var(--bg-950-free) / 3%);
   --content-li-background-gradient: linear-gradient(to left, hsl(var(--bg-950-free) / 3%) 0%, hsl(var(--bg-950-free) / 3%) 55%, transparent 90%);
-  --content-li-hr-border: 2px solid rgb(0 0 0 / 4%);
+  // --content-li-hr-border: 1.5px solid var(--hr-border-color, var(--layout-lineart-color));
 
   // === COLORS ================================================================
 
@@ -128,7 +128,7 @@
   // --layout-border-radius-small: 2px;
   // --layout-link-color: inherit;
   // --layout-link-color-hover: inherit;
-  --layout-lineart-color: hsl(var(--bg-950-free) / 20%);
+  --layout-lineart-color: hsl(var(--bg-950-free) / 15%);
   --layout-hr-dots-color: hsl(var(--bg-950-free) / 40%);
   // --layout-hr-border: 2px solid var(--hr-border-color, var(--layout-lineart-color));
   // --layout-hr-border-dashed: 2px dashed var(--hr-border-color, var(--layout-lineart-color));
