--- a/src/scss/customize/content-list-style-lines.scss
+++ b/src/scss/customize/content-list-style-lines.scss
@@ -1,16 +1,17 @@
 @import '../common/_functions';
 @import '../common/_mixins';
 
-:is(:root, :root.minimal) .content-list-style-lines {
+:root:not(.minimal) .content-list-style-lines {
   --content-li-background: none;
   --card-content-li-background: none;
+  --chapter-li-padding-bottom-offset: var(--chapter-list-gap, 4px);
 
-  [data-view=list] :is(.chapter-group__list-item, .story__blog-list-item, .card__link-list-item) {
+  :is(.chapter-group__list-item, .story__blog-list-item, .card__link-list-item) {
     border-radius: 0;
     border-bottom: var(--content-li-hr-border);
   }
 
-  [data-view=list] .card__link-list-item:last-child {
+  .card__link-list-item:last-child {
     border-bottom: none;
   }
 }
