--- a/src/scss/customize/content-list-style-free.scss
+++ b/src/scss/customize/content-list-style-free.scss
@@ -1,9 +1,11 @@
 @import '../common/_functions';
 @import '../common/_mixins';
 
-:root:not(.minimal) .content-list-style-free {
+:root .content-list-style-free {
   --content-li-background: none;
   --card-content-li-background: none;
+  --story-blog-li-background: none;
+  --chapter-li-background: none;
 
   [data-view=list] :is(.chapter-group__list-item, .story__blog-list-item) {
     border-radius: 0;
