--- a/src/scss/customize/content-list-style-lines.scss
+++ b/src/scss/customize/content-list-style-lines.scss
@@ -1,9 +1,11 @@
 @import '../common/_functions';
 @import '../common/_mixins';
 
-:root:not(.minimal) .content-list-style-lines {
+:root .content-list-style-lines {
   --content-li-background: none;
   --card-content-li-background: none;
+  --story-blog-li-background: none;
+  --chapter-li-background: none;
   --chapter-li-padding-bottom-offset: var(--chapter-list-gap, 4px);
 
   :is(.chapter-group__list-item, .story__blog-list-item, .card__link-list-item) {
