Revert "Use background colors for range input thumbs"
This reverts commit 28b599f7a601cc436d125d713d096eb2aab2c6f7.

--- a/src/scss/common/_lightmode.scss
+++ b/src/scss/common/_lightmode.scss
@@ -364,8 +364,8 @@
   // --input-color: var(--fg-500);
   // --input-color-disabled: var(--fg-800);
   --input-fill: var(--fg-800);
-  --input-range-thumb: var(--bg-600);
-  --input-range-thumb-hover: var(--bg-700);
+  --input-range-thumb: var(--fg-800);
+  --input-range-thumb-hover: var(--fg-600);
   --input-token-background: var(--bg-600);
   --input-token-color: var(--fg-inverted);
 
