--- a/src/scss/common/_properties.scss
+++ b/src/scss/common/_properties.scss
@@ -486,8 +486,8 @@
   --input-color: var(--fg-500);
   --input-color-disabled: var(--fg-800);
   --input-fill: var(--fg-700);
-  --input-range-thumb: var(--bg-400);
-  --input-range-thumb-hover: var(--bg-300);
+  --input-range-thumb: var(--fg-700);
+  --input-range-thumb-hover: var(--fg-300);
   --input-token-background: var(--bg-500);
   --input-token-color: var(--fg-400);
 
