Change dark kdb and infobox coolor assignments

--- a/src/scss/common/_properties.scss
+++ b/src/scss/common/_properties.scss
@@ -136,8 +136,8 @@
   --paragraph-spacing: 1.5rem;
   --blockquote-background: rgb(var(--dark-shade-rgb) / 15%);
   --placeholder-background: var(--bg-900);
-  --kbd-background: var(--bg-800);
-  --infobox-background: var(--bg-800);
+  --kbd-background: rgb(var(--dark-shade-rgb) / 17%);
+  --infobox-background: rgb(var(--dark-shade-rgb) / 17%);
   --text-shadow: -1px -1px 1px rgb(0 0 0 / 12%);
   --checkmark-checked: var(--fg-600);
   --checkmark-not-checked: var(--bg-900);
