--- a/src/scss/common/_base.scss
+++ b/src/scss/common/_base.scss
@@ -666,6 +666,10 @@ html:not(.logged-in) body:not(.logged-in) {
         line-height: 1.3;
         width: fit-content;
 
+        @container (min-width: 900px) {
+          font-size: var(--chapter-list-link-font-size, 14.5px);
+        }
+
         &:hover {
           color: var(--chapter-list-link-color-hover, var(--heading-link-color-hover));
         }
@@ -679,6 +683,10 @@ html:not(.logged-in) body:not(.logged-in) {
         font-size: var(--chapter-list-subrow-font-size, clamp(11.25px, 2.1cqw, 12.25px));
         font-weight: var(--font-weight-normal);
         line-height: 1.3;
+
+        @container (min-width: 900px) {
+          font-size: var(--chapter-list-subrow-font-size, 12.75px);
+        }
 
         > :is(span, time):not(:last-child)::after {
           content: " •";
