--- a/src/scss/common/_modals.scss
+++ b/src/scss/common/_modals.scss
@@ -1,19 +1,7 @@
+.dialog-modal,
 .modal {
   --modal-width: 300px;
-  position: fixed;
-  inset: 0;
-  z-index: 999999;
   line-height: 1.3;
-  contain: content; // Improve performance
-
-  &.age-confirmation {
-    --modal-width: 450px;
-  }
-
-  &:not(._open) {
-    display: none;
-    content-visibility: hidden;
-  }
 
   input[type=text] {
     width: 100%;
@@ -30,69 +18,6 @@
   input[type=range] {
     flex-grow: 1;
     border-radius: var(--layout-border-radius-small) 0 0 var(--layout-border-radius-small);
-  }
-
-  .close {
-    --focus-offset: -2px;
-    position: absolute;
-    top: 0;
-    right: 0;
-    display: block;
-    color: var(--fg-950);
-    font-size: 20px;
-    line-height: 1;
-    padding: 9px 12px 8px 16px;
-    text-shadow: none;
-    transition: color var(--transition-duration);
-
-    &:hover {
-      color: var(--fg-300);
-    }
-  }
-
-  .background-close {
-    cursor: default;
-    position: absolute;
-    inset: 0;
-    display: block;
-    background: var(--modal-overlay);
-    height: 100%; // Prevent gaps caused by mobile interface
-  }
-
-  &__wrapper {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    z-index: 1;
-    background-color: var(--modal-bg-color);
-    border-radius: var(--layout-border-radius-large);
-    max-height: calc(100% - 20px);
-    width: var(--modal-width);
-    max-width: calc(100vw - 20px);
-    box-shadow: var(--modal-box-shadow, var(--box-shadow-xl));
-    overflow: auto;
-    transform: translate(-50%, -50%);
-
-    ::-webkit-scrollbar-track {
-      -webkit-box-shadow: var(--scrollbar-box-shadow);
-      background: var(--scrollbar-background);
-      border-radius: 1px;
-    }
-
-    ::-webkit-scrollbar {
-      width: 6px;
-      height: 6px;
-      border-radius: 1px;
-    }
-
-    ::-webkit-scrollbar-thumb {
-      background-color: var(--scrollbar-thumb);
-      border-radius: 1px;
-    }
-
-    > hr {
-      margin: 0 12px;
-    }
   }
 
   &__header:is(h4) {
@@ -270,6 +195,100 @@
         margin-left: 3px;
       }
     }
+  }
+}
+
+.dialog-modal,
+.modal__wrapper {
+  background-color: var(--modal-bg-color);
+  padding: 0;
+  border: none;
+  border-radius: var(--layout-border-radius-large);
+  max-height: calc(100% - 20px);
+  width: var(--modal-width, 300px);
+  max-width: calc(100vw - 20px);
+  box-shadow: var(--modal-box-shadow, var(--box-shadow-xl));
+  overflow: auto;
+
+  ::-webkit-scrollbar-track {
+    -webkit-box-shadow: var(--scrollbar-box-shadow);
+    background: var(--scrollbar-background);
+    border-radius: 1px;
+  }
+
+  ::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+    border-radius: 1px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: var(--scrollbar-thumb);
+    border-radius: 1px;
+  }
+
+  > hr {
+    margin: 0 12px;
+  }
+}
+
+.dialog-modal__close,
+.modal .close {
+  --focus-offset: -2px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: block;
+  color: var(--fg-950);
+  font-size: 20px;
+  line-height: 1;
+  padding: 9px 12px 8px 16px;
+  text-shadow: none;
+  transition: color var(--transition-duration);
+
+  &:hover {
+    color: var(--fg-300);
+  }
+}
+
+.dialog-modal {
+  &::backdrop {
+    background: var(--modal-overlay);
+  }
+}
+
+.modal {
+  position: fixed;
+  inset: 0;
+  z-index: 999999;
+  display: none;
+  content-visibility: hidden;
+  contain: content; // Improve performance
+
+  &.age-confirmation {
+    --modal-width: 450px;
+  }
+
+  &._open {
+    display: block;
+    content-visibility: visible;
+  }
+
+  &__wrapper {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 1;
+    transform: translate(-50%, -50%);
+  }
+
+  .background-close {
+    cursor: default;
+    position: absolute;
+    inset: 0;
+    display: block;
+    background: var(--modal-overlay);
+    height: 100%; // Prevent gaps caused by mobile interface
   }
 }
 
