--- a/src/scss/common/_modals.scss
+++ b/src/scss/common/_modals.scss
@@ -239,7 +239,7 @@
 
 .dialog-modal__close,
 .modal .close {
-  --focus-offset: -2px;
+  --focus-offset: -4px;
   position: absolute;
   top: 0;
   right: 0;
@@ -247,8 +247,9 @@
   color: var(--fg-950);
   font-size: 20px;
   line-height: 1;
-  padding: 9px 12px 8px 16px;
   text-shadow: none;
+  padding: 9px 12px 8px 16px;
+  border-radius: 5px;
   transition: color var(--transition-duration);
 
   &:hover {
