--- a/src/scss/_chapter.scss
+++ b/src/scss/_chapter.scss
@@ -113,13 +113,13 @@
         color: var(--fg-400);
       }
     }
+  }
 
-    h1 {
-      font-family: var(--ff-chapter-title);
-      font-size: get_relative_clamp(1.25, 1.75, 320, $full-width, 'vw', 'em');
-      line-height: 1.3;
-      margin-top: .25rem;
-    }
+  &__title {
+    font-family: var(--ff-chapter-title);
+    font-size: get_relative_clamp(1.25, 1.75, 320, $full-width, 'vw', 'em');
+    line-height: 1.3;
+    margin-top: .25rem;
   }
 
   &__author {
