Fix performance issue with page styles

--- a/src/scss/common/_base.scss
+++ b/src/scss/common/_base.scss
@@ -91,6 +91,10 @@
     display: block;
     background-color: var(--page-bg-color);
   }
+
+  &.will-change::before {
+    will-change: transform;
+  }
 }
 
 %button {
