Hide list marker on cards by default
In case this is outside the default container.

--- a/src/scss/_card.scss
+++ b/src/scss/_card.scss
@@ -18,6 +18,7 @@
 }
 
 .card {
+  list-style: none;
   --layout-link-color-hover: var(--card-link-color-hover, var(--fg-300));
   --this-padding: min(var(--card-body-container-padding, clamp(0.75rem, 3.25cqw, 1.25rem)), 16px);
   position: relative;
