Reduce top inset for layered steps and peaks page style

--- a/src/scss/customize/page-style-layered-steps-a.scss
+++ b/src/scss/customize/page-style-layered-steps-a.scss
@@ -2,6 +2,7 @@
 @import '../common/_mixins';
 
 :root.page-style-mask-image-layered-steps-a:not(.minimal) .main__background {
+  top: max(0px, calc(var(--page-inset-top)) - 1rem);
   filter: var(--page-drop-shadow);
 
   &::before {
