--- a/src/scss/common/_base.scss
+++ b/src/scss/common/_base.scss
@@ -44,8 +44,10 @@
   &__background {
     position: absolute;
     inset: var(--page-inset-top) 0 0 0;
+    z-index: 0;
     background-color: var(--page-bg-color);
     box-shadow: var(--page-box-shadow);
+    transform: translateZ(0); // Improve render performance
 
     @include bp(640px) {
       border-radius: var(--layout-border-radius-large);
