Reduce page drop-shadow for better performance

--- a/src/scss/common/_properties.scss
+++ b/src/scss/common/_properties.scss
@@ -256,7 +256,7 @@
   --page-inset-top: 3rem;
   --page-bg-color: var(--bg-700);
   --page-box-shadow: 0 0 3px rgb(0 0 0 / 20%);
-  --page-drop-shadow: drop-shadow(0 1px 1px rgb(0 0 0 / 14%)) drop-shadow(0 0 2px rgb(0 0 0 / 22%));
+  --page-drop-shadow: drop-shadow(0 1px 1.5px rgb(0 0 0 / 25%));
 
   // === CARDS =================================================================
 
