--- a/src/scss/_story.scss
+++ b/src/scss/_story.scss
@@ -198,6 +198,10 @@ body:not(.logged-in) .story__actions :first-child:nth-last-child(3) {
     }
   }
 
+  &__password-note {
+    margin-bottom: 1.5rem;
+  }
+
   &__copyright-notice {
     color: var(--fg-800);
     font-size: var(--fs-xxs);
