--- a/src/scss/_icon-menu.scss
+++ b/src/scss/_icon-menu.scss
@@ -1,21 +1,16 @@
 .icon-menu {
   display: flex;
 
-  &__item {
-    display: flex;
-    align-items: center;
-    color: var(--navigation-color);
-    font-size: inherit;
-    padding: 0 10px;
-    height: var(--navigation-height);
-
-    &:hover {
-      color: var(--navigation-color-hover);
+  .menu-item {
+    :is(a, label, button):not(._no-menu-item-style) {
+      display: flex;
+      align-items: center;
+      color: var(--navigation-color);
+      font-size: inherit;
+      letter-spacing: 0;
+      padding: 0 10px;
+      height: var(--navigation-height);
     }
-  }
-
-  &__menu {
-    position: relative;
 
     &:hover,
     &:focus-within {
@@ -75,47 +70,6 @@
     @include bp(desktop) {
       display: flex;
       content-visibility: visible;
-    }
-
-    &__item {
-      cursor: pointer;
-      text-shadow: inherit;
-      border-radius: var(--layout-border-radius-small);
-      transition: background-color .1s;
-
-      &._with-submenu {
-        border-radius: var(--layout-border-radius-small) var(--layout-border-radius-small) 0 0;
-      }
-
-      &:hover {
-        background: var(--navigation-item-background-hover);
-      }
-    }
-
-    &__menu {
-      &:hover {
-        > :first-child {
-          background: var(--navigation-submenu-background);
-        }
-
-        .sub-menu {
-          transition-delay: .3s;
-        }
-      }
-
-      .sub-menu {
-        transform-origin: top left;
-        transition: var(--submenu-transition, opacity .1s, transform .07s);
-      }
-
-      &:not(:hover) {
-        .sub-menu {
-          pointer-events: none;
-          opacity: 0;
-          transform: scale(1, 0);
-          content-visibility: hidden;
-        }
-      }
     }
   }
 }
