--- a/src/scss/common/_base.scss
+++ b/src/scss/common/_base.scss
@@ -37,6 +37,7 @@
   position: relative;
   flex: 1 1 auto;
   color: var(--fg-500);
+  margin-top: var(--main-offset, 0);
   max-width: var(--site-width);
   width: 100%;
 
